fix button colors to be more readable

--- a/src/styles/_constants-darkmatter.scss
+++ b/src/styles/_constants-darkmatter.scss
@@ -86,7 +86,7 @@ $colorGenBg: #222;
 // $colorHeadBg: #262626;
 $colorHeadBg: rgba($colorBodyBg, 0);
 $colorHeadFg: $colorBodyFg;
-$colorKey: #288BFF;
+$colorKey: #1C67E3;
 $colorKeyFg: #fff;
 $colorKeyBg: #015fca; // Darker version of colorKey for use in major buttons
 $colorKeyHov: lighten($colorKey, 10%);
@@ -201,7 +201,7 @@ $filterItemHoverFg: brightness(1.2) contrast(1.1);
 $filterItemMissing: brightness(0.6) grayscale(1);
 $opacityMissing: 0.5;
 $borderMissing: 1px dashed $colorAlert !important;
-$browseFrameCornerColor:  rgb(0,150,215) 4px; //Color used for the corners of frames
+$browseFrameCornerColor: #1C67E3 4px; //Color used for the corners of frames
 
 @mixin browseFrameBorder() { // Used on main object container to add highlighted corners to non-hidden frames.
   border-image: radial-gradient(circle, #575757, #6c6c6c, #818181, #979797, #aeaeae);
@@ -221,8 +221,8 @@ $browseFrameCornerColor:  rgb(0,150,215) 4px; //Color used for the corners of fr
 
   background-repeat: no-repeat;
   background-size: 35px 35px;
-  border-radius: $controlCr;
-  box-shadow: 0px 0px 20px 2px rgb(148, 148, 148, .4);
+  border-radius: $interiorMarginLg;
+  box-shadow: 0px 0px 20px 2px rgb(140 140 140 / 20%);
 }
   
 
@@ -272,7 +272,7 @@ $colorIconAliasForKeyFilter: #aaa;
 $colorTabsHolderBg: rgba(black, 0.2);
 
 // Buttons and Controls
-$colorBtnBg: pullForward($colorBodyBg, 15%);
+$colorBtnBg: pullForward($colorBodyBg, 5%);
 $colorBtnBgHov: pullForward($colorBtnBg, 10%);
 $shdwBtnHov: inset rgba(white, 10%) 0 0 0 100px;
 $colorBtnFg: pullForward($colorBodyFg, 10%);
